fixed nav-bar spacing on small screens

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -120,8 +120,16 @@ img {
 		text-align: center;
 	}
 
+	.nav_div {
+		display: block;
+	}
+
 	.nav_div a {
 		margin-left: 0;
+	}
+
+	.nav_div:last-child {
+		margin-top: 20px;
 	}
 }
 
